fixed footer text pushing off screen to left

--- a/style.css
+++ b/style.css
@@ -162,4 +162,11 @@ header p {
     .footer {
         width: 100%;
     }
+    
+    .footer {
+        float: none;
+        padding-right: 15px;
+    }
+    
+    
 }
